[package]
name = "gateutil"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "The library with basic utilities for GateSim."
repository = "https://github.com/matszpk/gateutil"
documentation = "https://docs.rs/gateutil"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]


[dependencies]
gatesim = { version="0.1.0", path="../gatesim" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
